@@ -4,6 +4,9 @@
 The following people have submitted changes which have been applied to the
 core:
 
+=== SVN
+* Sean Cribbs
+
 === 0.6.4 Gem Shaper
 * Andrew Neil
 * zilkey
