@@ -1,5 +1,9 @@
 == Change Log
 
+=== SVN
+* Propagate global page when using <r:content /> with inherit attribute.
+  [Sean Cribbs]
+
 === 0.6.4 Gem Shaper
 * Extract Archive pages into a core extension. Add automatic testing of core 
   extensions from default test task. [Sean Cribbs]
